# rotors_simulator

./: README.md  plugin_struktur.txt
rotors_control/: CMakeLists.txt  Structure.txt  package.xml
rotors_control/config/: servo_motor_control.yaml
rotors_control/include/rotors_control/: lee_position_controller.h  voliro_controller.h
rotors_control/launch/: mockingbird_control.launch
rotors_control/src/nodes/: lee_position_controller_node.cpp  voliro_controller_node.cpp  voliro_controller_node.h
rotors_description/: package.xml
rotors_description/meshes/: mockingbird_rotorunit_wo_rotorguard.dae
rotors_description/urdf/: component_snippets.xacro  firefly.xacro  firefly_base.xacro  iris.xacro  mav_with_realsense.gazebo  mockingbird.gazebo  mockingbird.sdf  mockingbird.urdf  mockingbird.xacro  mockingbird_base.xacro  mockingbird_without_rotorguard.xacro  multirotor_base.xacro  voliro.xacro  voliro_base.xacro
rotors_gazebo/: package.xml
rotors_gazebo/include/realsense_gazebo_plugin/: gazebo_ros_realsense.h
rotors_gazebo/launch/: mav_hovering_example.launch  mav_hovering_example_msf.launch  mav_voliro_hovering_example.launch  mav_voliro_hovering_example_mavros_sitl.launch  mav_voliro_hovering_example_msf.launch  mockingbird.launch  mockingbird_ROScontrolled.launch  mockingbird_mavros.launch  realsense_with_firefly.launch  spawn_iris.launch  spawn_mav.launch  spawn_mockingbird.launch  voliro.launch
rotors_gazebo/models/box_sim/: model.config  model.sdf
rotors_gazebo/models/mockingbird/: model.config
rotors_gazebo/models/realsense_camera/: model.sdf
rotors_gazebo/models/sphere_sim/: model.config  model.sdf
rotors_gazebo/models/voliro/: model.config  voliro.sdf
rotors_gazebo/models/voliro/config/: servo_motor_control.yaml
rotors_gazebo/resource/: voliro.yaml  voliro_controller_mockingbird.yaml
rotors_gazebo/src/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
rotors_gazebo/worlds/: basic_realsense.world
rotors_gazebo_plugins/: CMakeLists.txt
rotors_gazebo_plugins/include/rotors_gazebo_plugins/: gazebo_angle_plugin.h  gazebo_mavlink_interface.h  gazebo_mavlink_interface_original.h  voliro_mavlink_interface.h
rotors_gazebo_plugins/src/: gazebo_angle_plugin.cpp  gazebo_bag_plugin.cpp  gazebo_mavlink_interface.cpp  gazebo_mavlink_interface_original.cpp  gazebo_ros_interface_plugin.cpp  voliro_mavlink_interface.cpp
rotors_hil_interface/: CMakeLists.txt
rotors_hil_interface/include/rotors_hil_interface/: hil_interface.h
